# Verification-of-Car-Following-Reinforcement-Learning

./: RingRoad.py
DDPG/: .gitignore  README.md  ddpg_torch_copy.py  ddpg_torch_copy_safe.py  evaluate_multicar.py  load_and_plot_episode_timeseries.py  save_actor_weights.py  test_load.m  toy_environment_multi.py  train_ddpg_in_environment.py  train_multi.py  train_multi_ddpg_in_environment.py  train_single.py
DDPG/DDPG-pytorch-phil-tabor/: ddpg_torch.py
DDPG/checkpoints/: Actor_ddpg  Critic_ddpg  TargetActor_ddpg  TargetCritic_ddpg  episode_history  episode_history2
DDPG/checkpoints/equilibrium_w_normal_noise/: Actor_ddpg  Critic_ddpg  TargetActor_ddpg  TargetCritic_ddpg  episode_history2
DDPG/checkpoints/normal_noise_mse_spacing/: TargetActor_ddpg
DDPG/envs/: environment_multi_with_IDM.py  toy_environment.py  toy_environment_multi.py
DDPG/model_arrays/: model1_weights.mat
DDPG/model_arrays/model1_weights_biases/: weights0.mat
DDPG/model_current/: specs.txt
DDPG/models/1-MSE_Spacing_Straight_Road/checkpoints/: Actor_ddpg
DDPG/models/10 - safe_simple_mse_tanh_single_probably_bad/: Actor_ddpg  TargetCritic_ddpg  model_weights_biases.mat  specs.txt.txt
DDPG/models/2-ACC_Straight_Road_Poor/checkpoints/: TargetActor_ddpg  episode_history225
DDPG/models/3-Safe_MSE_Spacing/: episode_history2  model_3_weights_biases.mat
DDPG/models/4-Safe_MSE_Spacing_Better/: Critic_ddpg  TargetCritic_ddpg
DDPG/models/Model 11/: Actor_ddpg  Critic_ddpg  TargetActor_ddpg  TargetCritic_ddpg  episode_history  episode_history0  model_weights_biases.mat  specs.txt.txt
DDPG/models/Model 12/: Actor_ddpg  Critic_ddpg  TargetActor_ddpg  TargetCritic_ddpg  episode_history  model_weights_biases.mat  specs.txt
DDPG/models/Model 13/: Actor_ddpg  Critic_ddpg  TargetActor_ddpg  TargetCritic_ddpg  episode_history  model_weights_biases.mat  specs.txt
DDPG/models/Model 14/: Actor_ddpg  Critic_ddpg  TargetActor_ddpg  TargetCritic_ddpg  episode_history  example_specs.txt  model_weights_biases.mat
DDPG/models/Model 16/: Actor_ddpg  Critic_ddpg  TargetActor_ddpg  TargetCritic_ddpg  episode_history.cpkl  model_weights_biases.mat  specs_model16.txt
DDPG/models/Model X/: Actor_ddpg  Critic_ddpg  TargetActor_ddpg  TargetCritic_ddpg  episode_history.cpkl  model_weights_biases.mat  specs.txt
DDPG/models/old/1-MSE_Spacing_Straight_Road/: specs.txt
DDPG/models/old/10 - safe_simple_mse_tanh_single_probably_bad/: Critic_ddpg  TargetActor_ddpg  episode_history
DDPG/models/old/2-ACC_Straight_Road_Poor/: specs.txt
DDPG/models/old/3-Safe_MSE_Spacing/: Actor_ddpg  Critic_ddpg  TargetActor_ddpg  TargetCritic_ddpg
DDPG/models/old/4-Safe_MSE_Spacing_Better/: Actor_ddpg  TargetActor_ddpg  episode_history2  (+1 more)
DDPG/old/: evaluate_agent_in_environment.py  train_ddpg_in_environment.py
DDPG/utils/: save_actor_weights.py
lcpaulson-metitarski-1ed3b6ab11b8/: .hg_archival.txt  .hgignore  .hgtags  MakeMetit  Makefile.am  Makefile.in  README.md  README_BINARY.txt  RELEASE-NOTES.txt  configure  configure.ac
lcpaulson-metitarski-1ed3b6ab11b8/doc/: MetiTarski_Tips.tex  MetiTarski_User_Guide.tex  MetiTarski_notes.tex  References.bib
lcpaulson-metitarski-1ed3b6ab11b8/scripts/: addaxioms.pl  addmetadata.pl  compare-logfiles.pl  runmetit.pl
lcpaulson-metitarski-1ed3b6ab11b8/src/: +ld.sml  Active.sig  Active.sml  Atom.sig  Atom.sml  AtomNet.sig  AtomNet.sml  Clause.sig  Clause.sml  ElementSet.sig  ElementSet.sml  Formula.sig  Formula.sml  Heap.sig  Heap.sml  KeyMap.sig  KeyMap.sml  KnuthBendixOrder.sig  KnuthBendixOrder.sml  Lazy.sig  Lazy.sml  Literal.sig  Literal.sml  LiteralNet.sig  LiteralNet.sml  Map.sig  Map.sml  Model.sig  Model.sml  Name.sig  Name.sml  NameArity.sig  NameArity.sml  Normalize.sig  Normalize.sml  Options.sig  Options.sml  Ordered.sig  Ordered.sml  Parse.sig  (+55 more)
lcpaulson-metitarski-1ed3b6ab11b8/src/RCF/: Algebra.sig  Algebra.sml  CADProjO.sig  CADProjO.sml  CertRCFk.sig  CertRCFk.sml  CertRCFp.sig  CertRCFp.sml  Common.sig  Common.sml  Groebner.sig  Groebner.sml  IntvlsFP.sig  IntvlsFP.sml  IntvlsQ.sig  IntvlsQ.sml  MTAlgebra.sig  MTAlgebra.sml  Mathematica.sig  Mathematica.sml  Nullsatz.sig  Nullsatz.sml  Qepcad.sig  Qepcad.sml  RCF.sig  RCF.sml  RealAlg.sig  RealAlg.sml  Resultant.sig  Resultant.sml  Rqi.sml  SMT.sig  SMT.sml  Sturm.sig  Sturm.sml
lcpaulson-metitarski-1ed3b6ab11b8/src/RCF/doc/: MLTNOTES.TXT  MMANOTES.TXT
lcpaulson-metitarski-1ed3b6ab11b8/src/Syntax/: Makefile  load.sml  mt.grm  mt.grm.sig  mt.grm.sml  mt.lex  mt.lex.sml
lcpaulson-metitarski-1ed3b6ab11b8/tptp/Axioms/: Bessel.ax  exp-extended.ax  exp-lower.ax  exp-upper.ax  floor.ax  ln-upper.ax  nthrt-lower.ax  nthrt-upper.ax  tan-lower.ax  tan-upper.ax
lcpaulson-metitarski-1ed3b6ab11b8/tptp/Problems/: Arthan1.tptp  Arthan1A.tptp  Arthan1B.tptp  Arthan1C.tptp  ArthanKM2-sincos.tptp  ArthanKM2.tptp  ArthanM2-sincos.tptp  ArthanM2.tptp  Bessel_Krasikov_Thm2.tptp  Bessel_Landau.tptp  CMOS-opamp.tptp  CONVOI-weak.tptp  CONVOI-weak2.tptp  CONVOI.tptp  CONVOI2-sincos-weak.tptp  CONVOI2-sincos.tptp  CONVOI2.tptp  Chua-1-IL-L-sincos.tptp  Chua-1-IL-L.tptp  Chua-1-IL-U-sincos.tptp  Chua-1-IL-U.tptp  Chua-1-VC1-L-sincos.tptp  Chua-1-VC1-L.tptp  Chua-1-VC1-U-sincos.tptp  Chua-1-VC1-U.tptp  Chua-1-VC2-L-sincos.tptp  Chua-1-VC2-L.tptp  Chua-1-VC2-U-sincos.tptp  Chua-1-VC2-U.tptp  Chua-2-IL-L-sincos.tptp  Chua-2-IL-L.tptp  Chua-2-IL-U-sincos.tptp  Chua-2-IL-U.tptp  Chua-2-VC1-L-sincos.tptp  Chua-2-VC1-L.tptp  Chua-2-VC1-U-sincos.tptp  Chua-2-VC1-U.tptp  Chua-2-VC2-L-sincos.tptp  Chua-2-VC2-L.tptp  Chua-2-VC2-U-sincos.tptp  (+849 more)
nnv/code/nnv/: startup_nnv.m  test.m  test.m~
saclib2.2.6/.bzr/branch/: last-revision
saclib2.2.6/.bzr/checkout/: dirstate
saclib2.2.6/.bzr/repository/: pack-names
saclib2.2.6/include/: hfloats.h.rej  sacproto.h
saclib2.2.6/src/: ARGSACLIB.c  external.c
saclib2.2.6/tmp/: saclib-attr-chris.patch  saclib-comment.patch  saclib-latex.patch  saclib-logic.patch  saclib-proto.patch  saclib-seqpoint.patch  saclib-signed.patch  saclib-static.patch  saclib-uninit.patch  saclib-unused.patch
(+28 files in other folders)
